next
----
  * Add kdump_open_fd() and kdump_open_fdset(). Keep KDUMP_ATTR_FILE_FD
    for (partial) backward compatibility.
  * Zstandard compression algorithm
  * AArch64 52-bit VA
  * Address translation tuning with addrxlat.default.* and addrxlat.force.*
    attributes.
    The old mechanism using addrxlat.opts is no longer available.
  * Fix Xen DomU translation type detection for /dev/mem.

0.4.1
-----
  * Automatic translation setup for Linux/aarch64
  * Support AMD EPYC with SME active
  * New attributes:
    - file.mmap_policy
    - file.mmap_cache.hits
    - file.mmap_cache.misses
    - file.read_cache.hits
    - file.read_cache.misses
  * Change *.vmcoreinfo.raw attributes from string to blob
  * Change kdump_vmcoreinfo_raw() and kdump_vmcoreinfo_line()
    - Caller is now the owner of the output string

0.4.0
-----
  * AArch64 paging
  * X86-64 5-level paging
  * Kernel layout auto-detection with kASLR on X86-64
  * Bitmap and blob attribute formats
  * New attributes:
    - file.bitmap attribute
    - file.zero_excluded
    - addrxlat.opts.pre
    - addrxlat.opts.post
    - xen.phys_start
  * Improve libaddrxlat read callback API performance: whole page per call
    instead of a 32-bit or 64-bit entity per call

0.3.0
-----
  * Complete API re-design:
    - split libaddrxlat from libkdumpfile
    - attribute references
    - attribute iterators
    - addrxlat callbacks and callback hook
  * Python bindings.
  * Comprehensive test suite for libaddrxlat.
  * Caching of dump pages.
  * Thread safety (see threads.md).
  * Improved Doxygen documentation (run 'make doxygen-doc').

0.2.0
-----
  * Unit tests (run "make check")
  * API and ABI changed:
    - new names, types and semantics of KDUMP_*ADDR constants for
      kdump_readp() and friends
    - parameters reordered
    - obsolete Xen functions removed
  * differentiation of Xen dump types (attribute "xen.type")
  * support for opening dumps in Xen hypervisor mode
  * many other Xen improvements