@@ -126,3 +126,25 @@ if [ $rc -eq 0 ]; then
     echo "Unexpected success!" >&2
     exit 1
 fi
+
+echo "Check that data from all three files is combined"
+./dumpdata -n3 "$dumpfile.1" "$dumpfile.2" "$dumpfile.3" 0x1ffc 8 0x2ffc 8 0x3ffc 8 > "$resultfile"
+rc=$?
+if [ $rc -ne 0 ]; then
+    echo "Cannot dump DISKDUMP data" >&2
+    exit $rc
+fi
+if ! diff "$expectfile" "$resultfile"; then
+    echo "Results do not match" >&2
+    exit 1
+fi
+
+echo "Check combined page map"
+./checkattr "$dumpfile.1" "$dumpfile.2" "$dumpfile.3" <<EOF
+file.pagemap = bitmap: 0x1e
+EOF
+rc=$?
+if [ $rc -ne 0 ]; then
+    echo "Attribute check failed" >&2
+    exit $rc
+fi
